--- a/2.html
+++ b/2.html
@@ -11,7 +11,7 @@
 <div>
     <div class="header-right bg">
     <ul>
-	  <li class="po bg"><a href="1.html"><img src="img/logo.png" width=70(px) alt="логотип"> </a></li>
+	  <li class="po bg"><a href="index.html"><img src="img/logo.png" width=70(px) alt="логотип"> </a></li>
       <li class="po bg"><a href="6.html">Тарифы</a></li>
       <li class="po bg"><a href="3.html">Почему мы?</a></li>
       <li class="po bg"><a href="4.html">Отзывы</a></li>
