--- a/4.html
+++ b/4.html
@@ -10,7 +10,7 @@
 
     <div class="header-right bg">
     <ul>
-	  <li class="po bg"><a href="1.html"><img src="img/logo.png" width=70(px) alt="логотип"> </a></li>
+	  <li class="po bg"><a href="index.html"><img src="img/logo.png" width=70(px) alt="логотип"> </a></li>
       <li class="po bg"><a href="2.html">Кому подходит?</a></li>
       <li class="po bg"><a href="6.html">Тарифы</a></li>
       <li class="po bg"><a href="3.html">Почему мы</a></li>
