--- a/7.html
+++ b/7.html
@@ -10,7 +10,7 @@
 <body class="body1">
 	<div class="header-right bg">
     <ul>
-	  <li class="po bg"><a href="1.html"><img src="img/logo.png" width=70(px) alt="монета"> </a></li>
+	  <li class="po bg"><a href="index.html"><img src="img/logo.png" width=70(px) alt="монета"> </a></li>
       <li class="po bg"><a href="2.html">Кому подходит?</a></li>
       <li class="po bg"><a href="3.html">Почему мы?</a></li>
       <li class="po bg"><a href="4.html">Отзывы</a></li>
@@ -23,11 +23,11 @@
 <!-- СЛАЙДЕР-->
 
 <div class="container_slider_css">
-	<img class="photo_slider_css" src="imG/y1.jpg" alt=" Фото не поддерживается вашим браузером">
-	<img class="photo_slider_css" src="imG/y2.jpg" alt=" Фото не поддерживается вашим браузером">
-	<img class="photo_slider_css" src="imG/y3.jpg" alt=" Фото не поддерживается вашим браузером">
-	<img class="photo_slider_css" src="imG/y4.jpg" alt=" Фото не поддерживается вашим браузером">
-	<img class="photo_slider_css" src="imG/y5.jpg" alt=" Фото не поддерживается вашим браузером">
+	<img class="photo_slider_css" src="img/y1.jpg" alt=" Фото не поддерживается вашим браузером">
+	<img class="photo_slider_css" src="img/y2.jpg" alt=" Фото не поддерживается вашим браузером">
+	<img class="photo_slider_css" src="img/y3.jpg" alt=" Фото не поддерживается вашим браузером">
+	<img class="photo_slider_css" src="img/y4.jpg" alt=" Фото не поддерживается вашим браузером">
+	<img class="photo_slider_css" src="img/y5.jpg" alt=" Фото не поддерживается вашим браузером">
   </div>
 <hr>
 <p> Если появятся какие-т овопросы/предложения, напишите нам, <a href="8.html">Контакты</a></p>
