--- a/8.html
+++ b/8.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header-right bg">
     <ul>
-	  <li class="po bg"><a href="1.html"><img src="img/logo.png" width=70(px) alt="монета"> </a></li>
+	  <li class="po bg"><a href="index.html"><img src="img/logo.png" width=70(px) alt="монета"> </a></li>
       <li class="po bg"><a href="6.html">Тарифы</a></li>
       <li class="po bg"><a href="3.html">Почему мы?</a></li>
       <li class="po bg"><a href="4.html">Отзывы</a></li>
